<resources>
    <string name="app_name">Discovering Colombia</string>
    <string name="username">Type your name</string>
    <string name="hint_email">Enter your Email address</string>
    <string name="send_email">Email my result</string>
    <string name="thank_you">Thanks for completing the test</string>
    <string name="start_quiz">Start Test</string>
    <string name="next">Next</string>
    <string name="congratz">Well, now you know a little bit more about Colombia, Congratulations!</string>
    <string name="test_result">You scored * out of * correct!</string>
    <string name="score_text">",  you scored  "</string>
    <string name="quant">"  out of  "</string>
    <string name="correct">"  correct!"</string>
    <string name="q1_question">What is the capital of Colombia?</string>
    <string name="q2_question">The official currency of Colombia is:</string>
    <string name="q1_a">Medellin</string>
    <string name="q1_b">Quito</string>
    <string name="q1_c">Caracas</string>
    <string name="q1_d">Bogota</string>
    <string name="q2_a">The Sol</string>
    <string name="q2_b">The Peso</string>
    <string name="q2_c">The Sucre</string>
    <string name="q2_d">The Balboa</string>
    <string name="q3_question">Colombia is the second flower exporter in the world after:</string>
    <string name="q4_question">The painter and sculptor Fernando Botero is famous for his figures:</string>
    <string name="q3_a">Japan</string>
    <string name="q3_b">U.S.</string>
    <string name="q3_c">Holland</string>
    <string name="q3_d">Kenya</string>
    <string name="q4_a">Hyperrealists</string>
    <string name="q4_b">Fat</string>
    <string name="q4_c">Skeletal</string>
    <string name="q4_d">Abstract</string>
    <string name="q5_question">The insect that is eaten in the Santander region of Colombia is:</string>
    <string name="q5_a">The big ass ant</string>
    <string name="q5_b">The Grasshopper</string>
    <string name="q5_c">The larvae of flour</string>
    <string name="q5_d">The Cockroaches</string>
    <string name="q1_correct_answer">d</string>
    <string name="q2_correct_answer">b</string>
    <string name="q3_correct_answer">c</string>
    <string name="q4_correct_answer">b</string>
    <string name="q5_correct_answer">a</string>
    <string name="quiz">Test</string>
    <string name="finished">Finished</string>
    <string name="Summary">Summary</string>

</resources>
