<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/placeholder_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="32dp"
            android:textSize = "24sp"
            android:text="@string/q1_question"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/mc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/placeholder_question"
            android:layout_below="@id/placeholder_question"
           >

            <RadioButton
                android:id="@+id/placeholder_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/q1_a"
                android:textSize = "24sp"
                />

            <RadioButton
                android:id="@+id/placeholder_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/q1_b"
                android:textSize = "24sp"
                 />

            <RadioButton
                android:id="@+id/placeholder_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/q1_c"
                android:textSize = "24sp"
                />

            <RadioButton
                android:id="@+id/placeholder_d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="44dp"
                android:text="@string/q1_d"
                android:textSize = "24sp"
                />

        </RadioGroup>

        <Button
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/mc"
            android:layout_below="@id/mc"
            android:background="@drawable/button"
            android:onClick="checkAnswers"
            android:text="@string/next" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_below="@id/next"
            android:layout_alignParentBottom="true"
            android:src="@drawable/colombia" />
    </RelativeLayout>
</ScrollView>